--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shaurya Awasthi</title>
-    <meta name="description" content="Helping students crack interviews and stay updated with real job & internship opportunities. Software Engineer at Accenture with 5K+ YouTube subscribers." />
+    <meta name="description" content="Helping students build strong technical foundations, prepare for interviews, and stay updated with real job & internship opportunities through practical content and trainings. Software Engineer at Accenture with 5K+ YouTube subscribers." />
     <meta name="keywords" content="Shaurya Awasthi, Software Engineer, DSA, Data Structures, Algorithms, Interview Preparation, Job Opportunities, Internships, YouTube, Placement" />
     <meta property="og:title" content="Shaurya Awasthi | Software Engineer & DSA Trainer" />
-    <meta property="og:description" content="Helping students crack interviews and stay updated with real job & internship opportunities." />
+    <meta property="og:description" content="Helping students build strong technical foundations, prepare for interviews, and stay updated with real job & internship opportunities through practical content and trainings." />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:image" content="https://bolt.new/static/og_default.png" />
     <meta name="twitter:card" content="summary_large_image" /> -->
     <meta name="twitter:title" content="Shaurya Awasthi | Software Engineer & DSA Trainer" />
-    <meta name="twitter:description" content="Helping students crack interviews and stay updated with real job & internship opportunities." />
+    <meta name="twitter:description" content="Helping students build strong technical foundations, prepare for interviews, and stay updated with real job & internship opportunities through practical content and trainings." />
     <!-- <meta name="twitter:image" content="https://bolt.new/static/og_default.png" /> -->
   </head>
   <body>
